[package]
name = "tree_by_path"
version = "1.0.1"
edition = "2021"
description = "A tree data structure featuring nodes addressable using a &Vec<usize> path and avoiding recursion and run-time borrow checking."
license = "MIT OR Apache-2.0"
authors = ["Koen Bekx <klbekx@gmail.com>"]
categories = ["data-structures"]
keywords = ["datastructure", "tree"]
readme = "README.md"
repository = "https://github.com/KoenLBekx/tree_by_path"
homepage = "https://github.com/KoenLBekx/tree_by_path"
documentation = "https://docs.rs/tree_by_path"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[badges]
maintenance = { status = "passively-maintained" }
